exercise-2.2/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/part-of: microservices
